--- a/TIPACCS_WP1_build_perturbation/Add_A1B_HadCM3_anomaly_to_JRA_data.ipynb
+++ b/TIPACCS_WP1_build_perturbation/Add_A1B_HadCM3_anomaly_to_JRA_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7caece9b",
+   "id": "d9f266d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10c71774",
+   "id": "d7b815cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,11 @@
     "cdir='./'\n",
     "\n",
     "# list of file variables to process and the corresponding infile variables\n",
-    "fvarlst_ano=['Q_1_5M','LW_TOTAL_DOWNWARD_SURFACE','P_SURF','SW_TOTAL_DOWNWARD_SURFACE','TOTAL_PRECIP','T_AIR_1_5M','U_10M','V_10M']\n",
-    "cvarlst_ano=['dq'    ,'dilr'                     ,'dp'    ,'dfield203'                ,'dprecip'     ,'dtemp'     ,'du'   ,   'dv']\n",
+    "fvarlst_ano=['SNOW' ,'Q_1_5M','LW_TOTAL_DOWNWARD_SURFACE','P_SURF','SW_TOTAL_DOWNWARD_SURFACE','TOTAL_PRECIP','T_AIR_1_5M','U_10M','V_10M']\n",
+    "cvarlst_ano=['dsnow','dq'    ,'dilr'                     ,'dp'    ,'dfield203'                ,'dprecip'     ,'dtemp'     ,'du'   ,   'dv']\n",
     "\n",
-    "fvarlst_JRA=['huss'  ,'rlds'                     ,'psl'   ,'rsds'                     ,'tprecip'     ,'ts'        ,'uas'  ,'vas']\n",
-    "cvarlst_JRA=['huss'  ,'rlds'                     ,'psl'   ,'rsds'                     ,'tprecip'     ,'ts'        ,'uas'  ,'vas']\n",
+    "fvarlst_JRA=['prsn' ,'huss'  ,'rlds'                     ,'psl'   ,'rsds'                     ,'tprecip'     ,'tas'        ,'uas'  ,'vas']\n",
+    "cvarlst_JRA=['prsn' ,'huss'  ,'rlds'                     ,'psl'   ,'rsds'                     ,'tprecip'     ,'tas'        ,'uas'  ,'vas']\n",
     "\n",
     "# input file name extension\n",
     "cfin_ext='20602100-19792019'\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b94efd",
+   "id": "ef9fe0eb",
    "metadata": {},
    "source": [
     "## Add HadCM3 anomaly data to JRA data"
@@ -50,8 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36db22ab",
+   "execution_count": 3,
+   "id": "39396b18",
    "metadata": {},
    "outputs": [
     {
@@ -96,23 +96,74 @@
       "    load JRA data 2000 ...\n",
       "        file : drowned_rsds_JRA55_y2000.nc\n",
       "    year 2000 is a leap year, repeat last frame over 1 day ...\n",
-      "    add anomaly to JRA data ...\n"
+      "    add anomaly to JRA data ...\n",
+      "    update global attributes ...\n",
+      "    write output file ...\n",
+      "        file :  drowned_rsds_JRA55_perturbed_A1B_HadCM3_20602100-19792019_anomaly_y2000.nc\n",
+      "\n",
+      "\n",
+      "    load HadCM3 data ...\n",
+      "        file : ./A1B_TOTAL_PRECIP_3h_ano_20602100-19792019_on_JRA_grid.NC\n",
+      "    load JRA data 2000 ...\n",
+      "        file : drowned_tprecip_JRA55_y2000.nc\n",
+      "    year 2000 is a leap year, repeat last frame over 1 day ...\n",
+      "    add anomaly to JRA data ...\n",
+      "    update global attributes ...\n",
+      "    write output file ...\n",
+      "        file :  drowned_tprecip_JRA55_perturbed_A1B_HadCM3_20602100-19792019_anomaly_y2000.nc\n",
+      "\n",
+      "\n",
+      "    load HadCM3 data ...\n",
+      "        file : ./A1B_T_AIR_1_5M_3h_ano_20602100-19792019_on_JRA_grid.NC\n",
+      "    load JRA data 2000 ...\n",
+      "        file : drowned_ts_JRA55_y2000.nc\n",
+      "    year 2000 is a leap year, repeat last frame over 1 day ...\n",
+      "    add anomaly to JRA data ...\n",
+      "    update global attributes ...\n",
+      "    write output file ...\n",
+      "        file :  drowned_ts_JRA55_perturbed_A1B_HadCM3_20602100-19792019_anomaly_y2000.nc\n",
+      "\n",
+      "\n",
+      "    load HadCM3 data ...\n",
+      "        file : ./A1B_U_10M_3h_ano_20602100-19792019_on_JRA_grid.NC\n",
+      "    load JRA data 2000 ...\n",
+      "        file : drowned_uas_JRA55_y2000.nc\n",
+      "    year 2000 is a leap year, repeat last frame over 1 day ...\n",
+      "    add anomaly to JRA data ...\n",
+      "    update global attributes ...\n",
+      "    write output file ...\n",
+      "        file :  drowned_uas_JRA55_perturbed_A1B_HadCM3_20602100-19792019_anomaly_y2000.nc\n",
+      "\n",
+      "\n",
+      "    load HadCM3 data ...\n",
+      "        file : ./A1B_V_10M_3h_ano_20602100-19792019_on_JRA_grid.NC\n",
+      "    load JRA data 2000 ...\n",
+      "        file : drowned_vas_JRA55_y2000.nc\n",
+      "    year 2000 is a leap year, repeat last frame over 1 day ...\n",
+      "    add anomaly to JRA data ...\n",
+      "    update global attributes ...\n",
+      "    write output file ...\n",
+      "        file :  drowned_vas_JRA55_perturbed_A1B_HadCM3_20602100-19792019_anomaly_y2000.nc\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for ivar,fvar in enumerate(fvarlst_ano):\n",
+    "for ivar,fvar in enumerate(fvarlst_ano[0:1]):\n",
     "    cvar_ano=cvarlst_ano[ivar]\n",
     "    cvar_JRA=cvarlst_JRA[ivar]\n",
     "\n",
-    "    # load data anomaly\n",
-    "    print('    load HadCM3 data ...')\n",
-    "    cfin_ano='./A1B_{}_3h_ano_{}_on_JRA_grid.NC'.format(fvar,cfin_ext)\n",
-    "    print('        file : {}'.format(cfin_ano))\n",
-    "    ds_ano = xr.open_dataset('./DATA_out/'+cfin_ano)\n",
-    "    \n",
+    "   \n",
     "    for year in range(yJRAs,yJRAe+1):\n",
     "        year_out=year\n",
+    "        print('YEAR = ',year)\n",
+    "        print(datetime.now())\n",
+    "        # load data anomaly\n",
+    "        print('    load HadCM3 data ...')\n",
+    "        cfin_ano='./A1B_{}_3h_ano_{}_on_JRA_grid.NC'.format(fvar,cfin_ext)\n",
+    "        print('        file : {}'.format(cfin_ano))\n",
+    "        ds_ano = xr.open_dataset('./DATA_out/'+cfin_ano)\n",
     "        \n",
     "        # load JRA data\n",
     "        print('    load JRA data '+str(year)+' ...')\n",
@@ -149,7 +200,9 @@
     "        print('        file : ',cfout)\n",
     "        ds_out.to_netcdf('DATA_out/JRA55_perturb/'+cfout)\n",
     "        print()\n",
-    "        print()"
+    "        print()\n",
+    "\n",
+    "print('DONE')"
    ]
   }
  ],
